# Corewar

./: ._Lib  ._includes  ._src  CMakeLists.txt  Makefile  asm  author
cor/virtual_machine/: check_flag.c  flag_in_arg.c
includes/: asm.h
src/: kz_check_param_of_instruction.c  kz_main_asm.c  kz_print_for_validation.c  kz_record_files.c  kz_secondary_functions.c  kz_secondary_functions_1.c  kz_secondary_functions_2.c  kz_validation_1.c  kz_validation_2.c  kz_validation_for_param.c  main_asm.c
